[[release-notes-x.x.x]]
==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[[release-notes-4.6.0]]
==== 4.6.0

[float]
===== Added

- Added transaction_name to reported error to allow grouping by transaction name {pull}1267[#1267]
- Added ability to query server for version (useful in the future) {pull}1278[#1278]
- Added instrumentation for https://github.com/zendesk/racecar/ Racecar Kafka library {pull}1284[#1284]

===== Changed

- Expanded filtering to sanitize any key that contains the string 'auth' {pull}1266[#1266]
- Rename `log_ecs_formatting` option to `log_ecs_reformatting`, deprecate old option name {pull}1248[#1248]
- When the configuration value for `log_path` is set, override the `logger` to point to that path instead of using e.g. Rails logger {pull}1247[#1247]
- Only send tracestate header for distributed tracing when it has content {pull}1277[#1277]
- Use the hostname as the Kubernetes pod name in the Container Info metadata if the pod id is parsed from cgroup {pull}1314[#1314]

====== Fixed

- Small change to Sidekiq tests to handle new configuration passing method {pull}1283[#1283]
- Set transaction sample rate to 0 when it's unsampled {pull}1339[#1339]
- Don't send unsampled transactions to APM server >= 8.0 {pull}1341[#1341]

[[release-notes-4.5.1]]
==== 4.5.1

[float]
===== Changed

- Update elasticsearch spy to use new transport gem name {pull}1257[#1257]
- Standardize placeholder for phone numbers as [PHONENUMBER] per https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-aws.md {pull}1246[#1246]

===== Fixed

- Fixed dependencies to allow CI to build successfully {pull}1259[#1259]